# demo-py-telemetry

./: README.md  cli-demo.py  main.py  mise.toml  pyproject.toml  setup_otel.py
